SVG element should become focusable when focus and key event listeners are added https://bugs.webkit.org/show_bug.cgi?id=200997

Reviewed by Said Abou-Hallawa.

Source/WebCore:

This patch removes the odd behavior WebKit (and Blink) browsers had to make SVG elements
with key or focus event listeners focusable. New behavior matches the behavior of Firefox
as well as the SVG 2.0 specification: https://www.w3.org/TR/SVG2/interact.html#Focus

Test: svg/custom/tabindex-order.html

* svg/SVGAElement.cpp:
(WebCore::SVGAElement::supportsFocus const):
* svg/SVGElement.cpp:
(WebCore::SVGElement::hasFocusEventListeners const): Deleted.
(WebCore::SVGElement::isMouseFocusable const): Deleted.
* svg/SVGElement.h:
* svg/SVGGraphicsElement.h:

LayoutTests:

Updated existing tests to set tabIndex where appropriate, and added SVG elements
without tabindex content attribute to tabindex-order.html so that the test would
skip those elements when sequentially focus navigating across them.

* svg/custom/add-event-listener-shadow-tree-element.html:
* svg/custom/resources/focus-event-handling-keyboard.js:
* svg/custom/resources/focus-event-handling.js:
* svg/custom/tabindex-order-expected.txt:
* svg/custom/tabindex-order.html: Added test cases without tabindex.


Canonical link: https://commits.webkit.org/214726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248983 268f45cc-cd09-0410-ab3c-d52691b4dbfc